--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
         "tagline": "Povídání nejen o běhání",
         "logo_img": "images/logo.svg",
         "logo_img_alt": "Logo",
-        "background_img": "/images/20210808_110644.jpg",
+        "background_img": "/images/profil.jpg",
         "has_nav": true,
         "nav_links": [
             {
