--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
+    "copy-webpack-plugin": "^5.1.1",
     "lodash": "^4.17.20",
-    "marked": "^2.0.0",
+    "marked": "^4.0.14",
     "moment": "^2.29.1",
     "moment-strftime": "^0.5.0",
-    "next": "^10.0.7",
-    "node-sass": "^5.0.0",
+    "next": "^12.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-script-tag": "^1.1.2",
+    "sass": "^1.51.0",
     "sourcebit": "^0.11.0",
     "sourcebit-source-filesystem": "^0.1.3",
     "sourcebit-target-next": "^0.6.2",
-    "webpack": "^5.24.1"
+    "webpack": "^4.0.3"
   },
   "devDependencies": {
+    "eslint": "^8.14.0",
     "prettier": "^2.2.1"
   }
 }
